# ising-glass-annealer

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  Setup.hs  build_shared_library.sh  cabal.project  conda-build.yml  conda-ci-linux.yml  conda-devel.yml  flake.nix  ising-glass-annealer.cabal  ising-ground-state.cabal
.github/workflows/: ci.yml
app/: Main.hs
cbits/: helpers.c  init.c  ising_glass_annealer.h  ising_glass_annealer_declarations.h  ising_ground_state.h
haskell/: cabal.project.local  ising-glass-annealer.cabal
haskell/lib/: ForeignLibrary.hs
haskell/src/Physics/: Ising.hs
lib/: ForeignLibrary.hs
python/: overlay.nix  run_tests.py  setup.py
python/conda/: build.sh  conda_build_config.yaml  meta.yaml
python/ising_glass_annealer/: __init__.py  build_extension.py
python/ising_ground_state/: __init__.py
python/test/: run_tests.py
src/: IsingGroundState.hs
src/Physics/: Ising.hs
test/: Spec.hs  sa_test_kagome_16.h5
