cabal-version:         2.4
name:                  ising-glass-annealer
version:               0.2.0.2
synopsis:              See README for more info
description:           See README for more info
license:               BSD-3-Clause
license-file:          LICENSE
author:                Tom Westerhout
maintainer:            Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:             2021 Tom Westerhout
category:              Math
build-type:            Custom
extra-doc-files:       README.md
                       CHANGELOG.md
tested-with:           GHC == 8.8.4
                       GHC == 8.10.4

flag build-example
  description: Build ising-ground-state executable
  manual: True
  default: False

custom-setup
  setup-depends:       base, containers, Cabal, filepath

common common-options
  build-depends:       base >= 4.13.0.0
                     , relude

  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ScopedTypeVariables
                       OverloadedStrings
                       FlexibleContexts
                       FlexibleInstances
                       MultiParamTypeClasses
                       TypeFamilies
                       DerivingVia
                       GeneralizedNewtypeDeriving
                       TypeApplications

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Physics.Ising
  c-sources:           cbits/init.c
                     , cbits/helpers.c
  cc-options:          -O3 -DNDEBUG -ffast-math
  build-depends:       vector
                     , vector-algorithms
                     , deepseq
                     , primitive
                     , mtl
                     , random >= 1.2.0
                     , mwc-random
                     , text
                     , unliftio

executable ising-ground-state
  import:              common-options
  -- if !flag(build-example)
  --   buildable:         False
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       ising-glass-annealer
                     , vector
                     , hdf5-hs
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite ising-ground-state-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       ising-glass-annealer
                     , hspec
                     , vector
                     , mwc-random
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
