cabal-version:       2.4
name:                ising-ground-state
version:             0.0.1.0
synopsis:            See README for more info
description:         See README for more info
license:             BSD-3-Clause
license-file:        LICENSE
author:              Tom Westerhout
maintainer:          Tom Westerhout <14264576+twesterhout@users.noreply.github.com>
copyright:           2021 Tom Westerhout
category:            Math
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.10.3

common common-options
  build-depends:       base >= 4.13.0.0
                     , relude
  
  mixins:              base hiding (Prelude)
                     , relude (Relude as Prelude)
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       ScopedTypeVariables
                       OverloadedStrings
                       FlexibleContexts
                       DerivingVia

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     IsingGroundState
                     , Physics.Ising
  build-depends:       hdf5-hs
                     , vector
                     , primitive
                     , mtl
                     , random >= 1.2.0
                     , mwc-random

executable ising-ground-state
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       ising-ground-state
                     , vector
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite ising-ground-state-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       ising-ground-state
                     , hspec
                     , vector
                     , mwc-random
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
