cabal-version:   3.0
name:            ising-glass-annealer
version:         0.4.1.2
synopsis:        See README for more info
description:     See README for more info
license:         BSD-3-Clause
license-file:    LICENSE
author:          Tom Westerhout
maintainer:
  Tom Westerhout <14264576+twesterhout@users.noreply.github.com>

copyright:       2021-2023 Tom Westerhout
category:        Math
build-type:      Simple
tested-with:     GHC ==9.4.6 || ==9.6.2

flag no-standalone
  description:
    Don't use the standalone option for foreign-library (it requires GHC which was built with -fPIC support)

  manual:      True
  default:     False

flag no-foreign-library
  description: Don't build the foreign-library
  manual:      True
  default:     False

common common-options
  build-depends:      base >=4.13.0.0
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wredundant-constraints
    -fhide-source-paths -Wmissing-export-lists -Wpartial-fields
    -Wmissing-deriving-strategies

  default-language:   GHC2021
  default-extensions:
    BangPatterns
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    TypeFamilies

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Physics.Ising
  build-depends:
    , deepseq
    , ghc-prim
    , primitive
    , random             >=1.2.0
    , strict-identity
    , unliftio
    , vector
    , vector-algorithms

  ghc-options:
    -fPIC -fno-prof-auto -fno-full-laziness -fexpose-all-unfoldings
    -fspecialise-aggressively

foreign-library ising_glass_annealer
  import:         common-options
  type:           native-shared

  if !flag(no-standalone)
    options: standalone

  if flag(no-foreign-library)
    buildable: False

  -- For some reason libffi is not linked properly
  -- if os(darwin) || os(osx)
  --   extra-libraries:   ffi
  hs-source-dirs: lib
  other-modules:  ForeignLibrary
  c-sources:      cbits/init.c
  cc-options:     -fPIC -Wall -Wextra
  include-dirs:   cbits
  ghc-options:    -Wno-missing-signatures -threaded
  build-depends:
    , deepseq
    , ising-glass-annealer
    , primitive
